ndb - bug#44301   ALTER TABLE REORGANIZE PARTITION - could fail if with 741 unsupported   alter table if appropriate hash-map was not present

This could be due to e.g adding going from 4 to 6 nodes (2 replica)
  or from 2 to 3 nodes (1-replica) or lots of other cases...

  Solution is to call prepareHashMap also in reorg-case
    and add support for reorg-case inside prepareHashMap by
    reusing Create default hashmap if not exist which
    will findout how many fragments currently is default